--- a/views/marketplace/cart_shopping.hbs
+++ b/views/marketplace/cart_shopping.hbs
@@ -188,27 +188,48 @@
                 </div>
 
                 {{!-- order details --}}
-
                 <div class="col col-12 col-lg-4 text-start px-lg-3">
-                    <div class="container-fluid calculus-container">
-                        <p class="d-inline-block me-auto">N° Artículos: </p>
-                        <p class="d-inline-block">{{n_products}}</p>
-                        <br>
-                        <p class="d-inline-block">SubTotal: </p>
-                        <p class="d-inline-block">50</p>
-                        <br>
-                        <p class="d-inline-block">IVA: </p>
-                        <p class="d-inline-block">50</p>
-                        <hr>
-                        <p class="d-inline-block">Total: </p>
-                        <p class="d-inline-block">{{total_cash}} Bs.</p>
-                    </div>
-                    <div class="container-fluid buy-btn-container text-center">
-                    {{#if order}}
-                        <button type="submit" class="btn btn-outline-secondary">Cancelar pedido</button>
-                    {{else}}
-                        <button  type="submit" class="btn btn-success">Hacer Pedido</button>
-                    {{/if}}
+                    <div class="card p-3">
+                        <div class="card-body">
+                            <h5 class="card-title">Detalles de la orden</h5>
+                            
+                            <hr>
+                            <div class="container-fluid px-0">
+                                <div class="row my-3">
+                                    <div class="col">
+                                        <h5 class="">N° Artículos: </h5>
+                                    </div>
+                                    <div class="col text-end">
+                                        <h5 class="">{{n_products}} artículos</h5>
+                                    </div>
+                                </div>
+                                <div class="row my-3">
+                                    <div class="col col-6"><h5 class="">SubTotal </h5></div>
+                                    <div class="col col-6 text-end"><h5 class="">{{total_cash}} Bs</h5></div>
+                                </div>
+                                {{!-- <div class="row">
+                                    <div class="col col-6"><h5 class="">IVA </h5></div>
+                                    <div class="col col-6 text-end"><h5 class="">0 Bs</h5></div>
+                                </div> --}}
+                                <div class="row my-3">
+                                    <div class="col"><h5 class="bold" style="font-weight: bold;">Total </h5></div>
+                                    <div class="col text-end"><h5 style="font-weight: bold;" class="">{{total_cash}} Bs</h5></div>
+                                </div>                            
+                            </div>
+                            {{!-- 
+                            <h5 class="card-title mt-4">Detalles de pago</h5>
+                            
+                            <hr> --}}
+                            
+                
+                            <hr>
+
+                            {{#if order}}
+                                <button type="submit" class="btn btn-outline-secondary">Cancelar pedido</button>
+                            {{else}}
+                                <button type="submit" class="btn btn-success w-100 p-2">Hacer Pedido </button>
+                            {{/if}}
+                        </div>
                     </div>
                 </div>
             </div>
