adding a order page for the clients marketplace and everything working properly

--- a/views/partials/marketplace/navbar.hbs
+++ b/views/partials/marketplace/navbar.hbs
@@ -36,6 +36,7 @@
                                     </a>
                                     <ul id="dropdownEnter" class="dropdown-menu text-small shadow">
                                         <li><a class="dropdown-item" href="/marketplace/cart_shopping">Carrito</a></li>
+                                        <li><a class="dropdown-item" href="/marketplace/order">Orden</a></li>
                                         <li><a class="dropdown-item" href="/profile">Perfil</a></li>
                                         <li>
                                             <hr class="dropdown-divider">
