--- a/public/css/marketplace_order.css
+++ b/public/css/marketplace_order.css
@@ -55,6 +55,22 @@ a {
     padding: 3% 15% 1%;
 }
 
+.brand-container {
+    width: 80px;
+    height: 40px;
+    position: relative;
+    overflow: hidden;
+}
+
+.brand-img {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    max-width: 110%;
+    height: 120%;
+}
+
 /* shopping cart items section */
 
 .login-container {
@@ -148,5 +164,11 @@ footer i:hover {
         width: 100%;
         padding: 3% 0 3%;
     } */
-    
+ 
+    .brand-container {
+        width: 60px;
+        height: 33px;
+        position: relative;
+        overflow: hidden;
+    }
 }
