--- a/public/css/styles_market.css
+++ b/public/css/styles_market.css
@@ -49,6 +49,22 @@ a {
     padding: 3% 15% 3%;
 }
 
+.brand-container {
+    width: 80px;
+    height: 40px;
+    position: relative;
+    overflow: hidden;
+}
+
+.brand-img {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    max-width: 110%;
+    height: 120%;
+}
+
 /* .search-bar-container {
     width: 50%;
     margin: auto;
@@ -187,6 +203,13 @@ footer i:hover {
     .form-container {
         width: 100%;
         padding: 3% 0 3%;
+    }
+
+    .brand-container {
+        width: 60px;
+        height: 33px;
+        position: relative;
+        overflow: hidden;
     }
 
 }
