--- a/views/home/contact.hbs
+++ b/views/home/contact.hbs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Crear Cuenta</title>
+    <title>Contactanos</title>
 
     <!-- boostrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -19,98 +19,80 @@
     <!-- font awesome icons -->
     <script src="https://kit.fontawesome.com/8faedc4425.js" crossorigin="anonymous"></script>
     
-    <link rel="stylesheet" href="/css/styles_log_in_customers.css">
+    <link rel="stylesheet" href="/css/styles_contact.css">
 </head>
 <body>
     <!-- navbar -->
     
-    {{> navbar}}
+   {{> navbar}}
     
     <!-- heading section -->
-    
-    <section id="heading">
-        <div class="container-fluid container-heading">
-    
-            <h1>Horarios de atencion : </h1>
-            <h2>10:30 - 20:30 mañanas</h2>
-            <h2>10:30 - 20:30 tardes</h2>
-            <h3>abierto</h3>
-    
-            <div class="search-bar-container">
-                <div class="row py-2">
-                    <div class="col col-12 col-lg-4">
-                    </div>
-                    <div class="col col-8 col-lg-4">
-                        <form class="d-flex" role="search">
-                            <input class="form-control me-2 " type="search" placeholder="Buscar" aria-label="Search">
-                            <button class="btn btn-outline-primary" type="submit"><i
-                                    class="fa-solid fa-magnifying-glass"></i></button>
-    
-                        </form>
-                    </div>
-                    <div class="col col-4 text-end">
-                        <a class="btn btn-primary" href="#" role="button"><i class="fa-solid fa-cart-shopping"></i>
-                            <span class="sopping-cart-text">Carrito</span></a>
-                    </div>
-                </div>
-            </div>
-            <hr>
+    <section id="heading-section">
+        <div class="container-heading text-center">
+            <h1>Contactanos</h1>
+            <h2 class="h2-custom">Como podemos ayudar?</h2>
         </div>
-    
     </section>
-
-    <!-- signup form customers -->
-
-    <section id="signup">
-        <div class="container-fluid login-container text-center">
-            <div class="container-fluid form-container text-start">
-                {{#if message}}
-                    <div class="alert {{alertType}} alert-dismissible fade show" role="alert">
-                        {{message}}
-                        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-                    </div>
-                {{/if}}
-                <div class="text-center">
-                    <h2>Crear Cuenta</h2>
-                </div>
-                <form action="/register" method="POST">
-                    <div class="mb-3">
-                        <label for="name" class="form-label">Nombres</label>
-                        <input type="text" class="form-control" id="name" aria-describedby="emailHelp" name="name">
-                    </div>
-                    <div class="mb-3">
-                        <label for="lastName" class="form-label">Apellidos</label>
-                        <input type="text" class="form-control" id="lastName" name="lastName">
-                    </div>
-                    <div class="mb-3">
-                        <label for="InputEmail" class="form-label">Dirección de correo electrónico</label>
-                        <input type="email" class="form-control" id="InputEmail" name="email" aria-describedby="emailHelp">
-                    </div>
-                    <div class="mb-3">
-                        <label for="InputPassword" class="form-label">Contraseña</label>
-                        <input type="password" class="form-control" id="exampleInputPassword1" name="password">
-                        <div id="passwordHelpBlock" class="form-text">
-                            Su contraseña debe ser de 8-20 caracteres, contener letras y números.
+    
+    <!-- form section -->
+    
+    <section id="form-section">
+        <div class="container-fluid form-container">
+            <form>
+                <div class="container text-center">
+                    <div class="row pb-3">
+                        <div class="col col-12 col-lg-3 text-start">
+                            <label for="exampleInputEmail1" class="form-label">Nombre <span class="required" aria-label="required">*</span></label>
+                        </div>
+                        <div class="col col-12 col-lg-9 px-3">
+                            <input type="text" class="form-control" id="inputName" aria-describedby="emailHelp" placeholder="Su nombre" required>
+                            <!-- <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div> -->
                         </div>
                     </div>
-                    <div class="mb-5">
-                        <label for="InputPassword1" class="form-label">Repetir Contraseña</label>
-                        <input type="password" class="form-control" id="InputPassword1" name="repPassword">
+                    <div class="row pb-3">
+                        <div class="col col-12 col-lg-3 text-start">
+                            <label for="exampleInputPassword1" class="form-label">Correo Electrónico <span class="required" aria-label="required">*</span></label>
+                        </div>
+                        <div class="col col-12 col-lg-9 px-3">
+                            <input type="email" class="form-control" id="inputEmail" placeholder="Correo electrónico de contacto" required>
+                        </div>
                     </div>
-                    <div class="text-center">
-                        <button type="submit" class="btn btn-primary">Crear Cuenta</button>
+                    <div class="row pb-3">
+                        <div class="col col-12 col-lg-3 text-start">
+                            <label for="exampleInputPassword1" class="form-label">Asunto <span class="required" aria-label="required">*</span></label>
+                        </div>
+                        <div class="col col-12 col-lg-9 px-3">
+                            <input type="text" class="form-control" id="text" placeholder="El asunto de su mensaje" required>
+                        </div>
+                    </div>
+                    <div class="row pb-3">
+                        <div class="col col-12 col-lg-3 text-start">
+                            <label for="exampleInputPassword1" class="form-label">Mensaje <span class="required" aria-label="required">*</span></label>
+                        </div>
+                        <div class="col col-12 col-lg-9 px-3">
+                            <textarea class="form-control" placeholder="Deja tu mensaje aqui" id="floatingTextarea" rows="10" required></textarea>
+                        </div>
+                    </div>
 
+                    <div class="row pb-3">
+                        <div class="col col-12 col-lg-3 ">
+                        </div>
+                        <div class="col col-12 col-lg-9 px-3 text-start">
+                            
+                            <button type="submit" class="btn btn-primary">Enviar</button>
+                        </div>
                     </div>
-                </form>
-            </div>
+                </div>
+
+            </form>
         </div>
     </section>
-
-    <!-- footer section -->
     
-    <section id="footer">
+    <!-- footer section -->
+
+    <section id="footer-section">
         <footer>
-            <div class="container-fluid footer-container mt-4">
+            <div class="container-fluid footer-container">
                 <div class="container text-start">
                     <div class="row">
                         <div class="col col-12 col-lg-4">
@@ -160,22 +142,16 @@
                         </div>
                     </div>
                 </div>
-                <hr>
+                <hr class="hr-footer">
                 <h4 class="copyright">Copyright © 2022 Tienda Electrónica OVA S.R.L. Todos los derechos reservados.</h4>
             </div>
         </footer>
-    
     </section>
-    <!-- bootstrap js cdn -->
-    
+
+    <!-- bootstrap js -->
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
         crossorigin="anonymous"></script>
-    
-    <script src="https://unpkg.com/@popperjs/core@2"></script>
-
-    <!-- js custom -->
-    <script src="../js/market.js"></script>
-
 </body>
 </html>
