--- a/views/home/location.hbs
+++ b/views/home/location.hbs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Crear Cuenta</title>
+    <title>Nuestra Ubicación</title>
 
     <!-- boostrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -19,7 +19,8 @@
     <!-- font awesome icons -->
     <script src="https://kit.fontawesome.com/8faedc4425.js" crossorigin="anonymous"></script>
     
-    <link rel="stylesheet" href="/css/styles_log_in_customers.css">
+
+    <link rel="stylesheet" href="/css/styles_location.css">
 </head>
 <body>
     <!-- navbar -->
@@ -27,90 +28,43 @@
     {{> navbar}}
     
     <!-- heading section -->
-    
-    <section id="heading">
-        <div class="container-fluid container-heading">
-    
-            <h1>Horarios de atencion : </h1>
-            <h2>10:30 - 20:30 mañanas</h2>
-            <h2>10:30 - 20:30 tardes</h2>
-            <h3>abierto</h3>
-    
-            <div class="search-bar-container">
-                <div class="row py-2">
-                    <div class="col col-12 col-lg-4">
-                    </div>
-                    <div class="col col-8 col-lg-4">
-                        <form class="d-flex" role="search">
-                            <input class="form-control me-2 " type="search" placeholder="Buscar" aria-label="Search">
-                            <button class="btn btn-outline-primary" type="submit"><i
-                                    class="fa-solid fa-magnifying-glass"></i></button>
-    
-                        </form>
-                    </div>
-                    <div class="col col-4 text-end">
-                        <a class="btn btn-primary" href="#" role="button"><i class="fa-solid fa-cart-shopping"></i>
-                            <span class="sopping-cart-text">Carrito</span></a>
-                    </div>
-                </div>
-            </div>
-            <hr>
+    <section id="heading-section">
+        <div class="container-fluid container-heading ">
+            <h1>Nuestra Ubicación</h1>
+            <h3 class="h2-custom">Visítanos! estamos a tu dispocisión</h3>
+            <!-- <hr> -->
         </div>
-    
     </section>
 
-    <!-- signup form customers -->
-
-    <section id="signup">
-        <div class="container-fluid login-container text-center">
-            <div class="container-fluid form-container text-start">
-                {{#if message}}
-                    <div class="alert {{alertType}} alert-dismissible fade show" role="alert">
-                        {{message}}
-                        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    <section id="location">
+        <div class="container-fluid location-container">
+            <h3 class="black-version pt-4 pt-lg-0">Nos encontramos en la Avenida Civica entre la calle Calama y la 1ro de Abril, frente a Radio ACLO Potosí.</h3>
+            <div class="container-fluid py-4">
+                <div class="row">
+                    <div class="col col-12 col-lg-6">
+                        <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d939.7626445353102!2d-65.7549759!3d-19.5823337!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x93f94e73f43c9935%3A0x556744dfc89c2ff0!2sAve%20Civica%20736%2C%20Villa%20Imperial%20de%20Potos%C3%AD!5e0!3m2!1ses!2sbo!4v1667078109122!5m2!1ses!2sbo"
+                            width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                            referrerpolicy="no-referrer-when-downgrade"></iframe>
                     </div>
-                {{/if}}
-                <div class="text-center">
-                    <h2>Crear Cuenta</h2>
+                    <div class="col col-12 col-lg-6 px-4 pt-4 pt-lg-0 maps-container">
+                        <h2 class="black-version">Horarios de atención:</h2>
+                        <h3 class="black-version">De Lunes a Viernes:</h3>
+                        <p class="black-version">Mañanas de: 8:00 a.m. a 12:30 p.m.</p>
+                        <p class="black-version">Tardes de: 2:00 p.m. a 6:00 p.m.</p>
+                        <h3 class="black-version">Sabados y Domingos:</h3>
+                        <p class="black-version">De: 8:00 a.m. a 4:30 p.m.</p>
+                    </div>
                 </div>
-                <form action="/register" method="POST">
-                    <div class="mb-3">
-                        <label for="name" class="form-label">Nombres</label>
-                        <input type="text" class="form-control" id="name" aria-describedby="emailHelp" name="name">
-                    </div>
-                    <div class="mb-3">
-                        <label for="lastName" class="form-label">Apellidos</label>
-                        <input type="text" class="form-control" id="lastName" name="lastName">
-                    </div>
-                    <div class="mb-3">
-                        <label for="InputEmail" class="form-label">Dirección de correo electrónico</label>
-                        <input type="email" class="form-control" id="InputEmail" name="email" aria-describedby="emailHelp">
-                    </div>
-                    <div class="mb-3">
-                        <label for="InputPassword" class="form-label">Contraseña</label>
-                        <input type="password" class="form-control" id="exampleInputPassword1" name="password">
-                        <div id="passwordHelpBlock" class="form-text">
-                            Su contraseña debe ser de 8-20 caracteres, contener letras y números.
-                        </div>
-                    </div>
-                    <div class="mb-5">
-                        <label for="InputPassword1" class="form-label">Repetir Contraseña</label>
-                        <input type="password" class="form-control" id="InputPassword1" name="repPassword">
-                    </div>
-                    <div class="text-center">
-                        <button type="submit" class="btn btn-primary">Crear Cuenta</button>
-
-                    </div>
-                </form>
             </div>
         </div>
     </section>
 
     <!-- footer section -->
     
-    <section id="footer">
+    <section id="footer-section">
         <footer>
-            <div class="container-fluid footer-container mt-4">
+            <div class="container-fluid footer-container">
                 <div class="container text-start">
                     <div class="row">
                         <div class="col col-12 col-lg-4">
@@ -160,22 +114,17 @@
                         </div>
                     </div>
                 </div>
-                <hr>
+                <hr class="hr-footer">
                 <h4 class="copyright">Copyright © 2022 Tienda Electrónica OVA S.R.L. Todos los derechos reservados.</h4>
             </div>
         </footer>
-    
     </section>
-    <!-- bootstrap js cdn -->
+    
+    <!-- bootstrap js -->
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
         crossorigin="anonymous"></script>
-    
-    <script src="https://unpkg.com/@popperjs/core@2"></script>
-
-    <!-- js custom -->
-    <script src="../js/market.js"></script>
 
 </body>
 </html>
