--- a/views/partials/marketplace/navbar.hbs
+++ b/views/partials/marketplace/navbar.hbs
@@ -2,9 +2,22 @@
     
     <div class="container-fluid navbar-container">
     
-        <nav class="navbar navbar-expand-lg navbar-dark mb-3 py-3">
+        <nav class="navbar navbar-expand-lg navbar-dark mb-0 py-3">
             <div class="container-fluid px-0">
-                <a class="navbar-brand" href="/">OVA Tienda Virtual</a>
+                <a class="navbar-brand align-text-center" href="/">
+                    <div class="row">
+                        <div class="col">
+                            <div class=" brand-container rounded mx-0 mx-md-auto">
+                                <img src="/images/brand.png" alt="Logo" class="brand-img">
+                            </div>
+                        </div>
+                        <div class="col px-0 mt-1 text-center">
+                            <span class="mx-auto">
+                                Tienda Virtual
+                            </span>
+                        </div> 
+                    </div>
+                </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                     aria-label="Toggle navigation">
